<resources>
    <string name="app_name">Step Counter</string>
    <string name="title">Step Counter</string>
    <string name="record">Your Goal: %1$d steps</string>
    <string name="steps_label">Steps taken:</string>
    <string name="steps">%1$d</string>
    <string name="time">Duration: %1$s</string>
    <string name="distance">Distance: %1$s</string>
    <string name="settings">Settings</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="achieved">Record Achieved!</string>
    <string name="step_size">Step size</string>
    <string name="step_size_summary">Current step size: %1$.2f %2$s</string>
    <string name="set_step_size">Set step size</string>
    <string name="goal">Goal</string>
    <string name="goal_summary">Current goal: %,d steps</string>
    <string name="set_goal">Set goal</string>
</resources>
