<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mhv.stepcounter.MainActivityFragment">

    <TextView
        android:id="@+id/dayRecordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:text="Day record: "
        android:textSize="24dp"
        android:textColor="#126f93" />

    <TextView
        android:id="@+id/stepLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dayRecordText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/steps_label"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/stepText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stepLabel"
        android:layout_centerHorizontal="true"
        tools:text="0"
        android:textSize="60dp"
        android:textColor="#126f93" />


    <TextView
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/achievedText"
        android:layout_marginTop="22dp"
        android:textSize="22dp"
        tools:text="@string/time" />

    <TextView
        android:id="@+id/distanceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/timeText"
        android:layout_below="@+id/timeText"
        android:layout_marginTop="37dp"
        android:textSize="22dp"
        tools:text="@string/distance" />

    <Button
        android:id="@+id/startButton"
        style="?android:attr/selectableItemBackground"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundedbutton"
        android:textColor="#176025"
        android:text="@string/start"
        />


    <TextView
        android:id="@+id/achievedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stepText"
        android:layout_centerHorizontal="true"
        android:text="@string/achieved"
        android:textColor="#116892"
        android:textSize="24dp"
        android:visibility="invisible" />

</RelativeLayout>